--- a/templates/base/about.html
+++ b/templates/base/about.html
@@ -9,7 +9,9 @@
             <h1 class="text-3xl font-bold text-primary">About this Project</h1>
             <hr class="my-4">
             <p class="mb-4">
-                This Django web development project is a continuation of a <a class="underline transition-all duration-500 decoration-primary hover:underline-offset-4 underline-offset-1" href="https://carlmurray.design/p/cmurray/03678e7f" target="_blank">UX Design project</a> I completed during my Diploma with the UX Design Institute which goes through the full UX process from research all the way to prototyping and handover.
+                This Django web development project is a continuation of a <a class="underline transition-all duration-500 decoration-primary hover:underline-offset-4 underline-offset-1"
+    href="https://carlmurray.design/p/cmurray/03678e7f"
+    target="_blank">UX Design project</a> I completed during my Diploma with the UX Design Institute which goes through the full UX process from research all the way to prototyping and handover.
             </p>
             <p class="mb-4">
                 The end result was a user-friendly flight booking flow which was informed by user research and prototyped to a medium fidelity in Figma.
@@ -18,7 +20,7 @@
                 Revisiting the project a year later, I am now using it as a foundation to build upon and bring it from Figma prototype, to a fully functioning Django-based web application, combining my passions for user-centric design and web development to build a holistic solution.
             </p>
             <p>
-                <span>Technologies used: </span>Python, Django, htmx, JavaScript, Tailwind CSS, PostgreSQL, Heroku
+                <span>Technologies used:</span>Python, Django, htmx, JavaScript, Tailwind CSS, PostgreSQL, Heroku
             </p>
         </div>
         <div class="max-w-[60%] md:pl-8 lg:max-w-[35%] flex-1 my-10 md:my-0">
