--- a/templates/core/order-confirmation.html
+++ b/templates/core/order-confirmation.html
@@ -9,6 +9,7 @@
         <h2 class="text-lg text-center">
             You booking reference is <strong>{{ booking.get_shorthand }}</strong>
         </h2>
+        <!-- VIEW BOOKINGS CTA -->
         <a href="{% url 'bookings' %}"
            class="flex items-center h-12 px-4 mt-4 text-white rounded-full bg-primary">View Bookings</a>
     </div>
