--- a/templates/users/register.html
+++ b/templates/users/register.html
@@ -6,7 +6,7 @@
     <div class="flex items-center w-screen m-auto mx-auto bg-gray-100">
         <div class="container flex justify-center px-5 mx-auto">
             <div class="container flex flex-col justify-center w-full max-w-xl p-6 mx-auto bg-white sm:p-12 rounded-3xl drop-shadow-lg">
-                <!-- LOGIN HEADER -->
+                <!-- SIGN UP HEADER -->
                 <h1 class="mx-auto mb-6 text-3xl font-bold text-primary">Create account</h1>
                 <!-- FORM -->
                 <form method='post' class="flex justify-center w-full mx-auto">
@@ -69,6 +69,7 @@
                                    aria-label="Confirm password"
                                    class="h-12 px-4 rounded-full  border-gray-300 bg-white  focus:drop-shadow-md border-[1px] focus:border-primary focus:outline-0 focus:ring-0">
                         </div>
+                        <!-- PASSWORD INSTRUCTIONS -->
                         <div class="p-4">
                             <span class="text-xs text-gray-700">
                                 <ul class="list-disc">
@@ -79,6 +80,7 @@
                                 </ul>
                             </span>
                         </div>
+                        <!-- SUBMIT BUTTON -->
                         <button type="submit"
                                 aria-label="Create account"
                                 class="flex items-center justify-center h-12 px-6 font-bold text-center text-white rounded-full bg-primary py-auto">
