--- a/templates/403.html
+++ b/templates/403.html
@@ -6,7 +6,9 @@
 {% block content %}
     <div class="flex flex-col items-center justify-center my-auto">
         <h1 class="text-3xl font-bold text-center text-primary">403 Error</h1>
-        <h2 class="text-xl text-center">Whoops! You don't have permission to view this page. It's like trying to enter a VIP area without an invitation.</h2>
+        <h2 class="text-xl text-center">
+            Whoops! You don't have permission to view this page. It's like trying to enter a VIP area without an invitation.
+        </h2>
         <a href="{% url 'home-page' %}"
            class="flex items-center justify-center h-12 col-span-4 px-6 my-4 font-bold text-center text-white rounded-full sm:col-span-2 md:col-span-1 bg-primary py-auto drop-shadow-sm">
         Go back Home</a>
