--- a/templates/404.html
+++ b/templates/404.html
@@ -6,7 +6,9 @@
 {% block content %}
     <div class="flex flex-col items-center justify-center my-auto">
         <h1 class="text-3xl font-bold text-center text-primary">404 Error</h1>
-        <h2 class="text-xl text-center">Uh-oh! The page you're looking for seems to be missing. It's like searching for a book that's not on the shelf.</h2>
+        <h2 class="text-xl text-center">
+            Uh-oh! The page you're looking for seems to be missing. It's like searching for a book that's not on the shelf.
+        </h2>
         <a href="{% url 'home-page' %}"
            class="flex items-center justify-center h-12 col-span-4 px-6 my-4 font-bold text-center text-white rounded-full sm:col-span-2 md:col-span-1 bg-primary py-auto drop-shadow-sm">
         Go back Home</a>
