--- a/templates/blog/blog-detail.html
+++ b/templates/blog/blog-detail.html
@@ -4,6 +4,7 @@
     {{ post.title }}
 {% endblock title %}
 {% block content %}
+    <!-- COVER IMAGE -->
     <div class="relative flex items-center w-screen overflow-hidden sm:max-h-80">
         <div class="absolute w-full h-full opacity-50 bg-gradient-to-r from-40% from-primary to-fuchsia-500"></div>
         <img class="object-cover w-full h-full" src="{{ post.cover_image.url }}">
@@ -12,9 +13,11 @@
         </h1>
     </div>
     <div class="container h-full px-5 mx-auto">
+        <!-- MAIN CONTENT -->
         <main class="my-16">
             {{ post.content_rendered | safe }}
         </main>
+        <!-- RELATED CONTENT -->
         <section class="mb-16">
             <h2>More related content</h2>
             <div class="grid gap-8 md:grid-cols-2 lg:grid-cols-3">
