--- a/templates/blog/blog.html
+++ b/templates/blog/blog.html
@@ -4,6 +4,7 @@
     Travel Blog
 {% endblock title %}
 {% block content %}
+    <!-- COVER IMAGE -->
     <div class="relative flex items-center w-screen overflow-hidden sm:max-h-80">
         <div class="absolute w-full h-full opacity-50 bg-gradient-to-r from-40% from-primary to-fuchsia-500"></div>
         <img class="object-cover w-full h-full"
@@ -14,8 +15,10 @@
     </div>
     <div class="container h-full px-5 mx-auto my-12">
         <div class="py-12">
+            <!-- BLOG POSTS -->
             <main class="px-6 m-auto xl:container md:px-12 xl:px-6">
                 <div class="grid gap-8 md:grid-cols-2 lg:grid-cols-3">
+                    <!-- ITERATE THROUGH POSTS AND RENDER -->
                     {% for post in posts %}
                         <div class="flex flex-col p-6 transition-all duration-300 ease-in-out bg-white shadow-sm hover:scale-[1.03] hover:shadow-xl sm:p-8 rounded-3xl">
                             <div class="relative overflow-hidden rounded-xl">
