--- a/templates/core/bookings.html
+++ b/templates/core/bookings.html
@@ -7,8 +7,10 @@
     <div class="container h-full px-5 mx-auto my-12">
         <h1 class="text-2xl font-bold sm:text-3xl text-primary">Bookings</h1>
         <hr class="mt-4 mb-8 border-gray-300">
+        <!-- BOOKINGS TABLE -->
         <div class="relative overflow-x-auto bg-white rounded-lg shadow-md">
             <table class="w-full text-xs text-left sm:text-sm">
+                <!-- TABLE HEAD -->
                 <thead class="text-white uppercase bg-primary">
                     <tr>
                         <th scope="col" class="px-1 py-3 sm:px-6">Reference</th>
@@ -18,6 +20,7 @@
                         <th scope="col" class="px-1 py-3 sm:px-6">Action</th>
                     </tr>
                 </thead>
+                <!-- TABLE BODY -->
                 {% for booking in bookings %}
                     <tbody>
                         <tr class="border-b">
