--- a/templates/partials/passengers-edit.html
+++ b/templates/partials/passengers-edit.html
@@ -20,6 +20,7 @@
             <!-- RENDER PASSENGER NAMES WITH INPUTS -->
             {% for passenger in passengers %}
                 <li class="grid grid-cols-2 gap-2">
+                    <!-- FIRST NAME INPUT -->
                     <input class="bg-transparent border-primary border-x-0 border-t-0 border-b-[1px] col-span-1"
                            type="text"
                            name="first-{{ passenger.id }}"
@@ -28,6 +29,7 @@
                            aria-label="First name: {{ passenger.first }}"
                            pattern="\S+"
                            required>
+                    <!-- LAST NAME INPUT -->
                     <input class="bg-transparent border-primary border-x-0 border-t-0 border-b-[1px] col-span-1"
                            type="text"
                            name="last-{{ passenger.id }}"
@@ -42,13 +44,16 @@
     </form>
     <!-- 'POST' MEANS USER SAVED EDITS; 'DELETE' MEANS USERS CANCELLED EDITS -->
 {% elif request.method == 'POST' or request.method == 'DELETE' %}
+    <!-- HX-TARGET FOR SWAP -->
     <div hx-target="this" hx-swap="outerHTML" class="max-w-[400px]">
         <div class="flex items-center justify-between">
             <h3 class="text-xl font-bold text-primary">Passengers</h3>
+            <!-- 'EDIT' BTN USES HX-GET -->
             <button class="rounded-full py-2 px-4 border-[1px] border-primary hover:bg-primary hover:text-white transition-all duration-300"
                     hx-get="/bookings/detail/edit/{{ booking.id }}"
                     aria-label="Edit passengers">Edit Passengers</button>
         </div>
+        <!-- RENDER PASSENGER NAMES -->
         <ol class="list-decimal max-w-[400px]">
             {% for passenger in passengers %}
                 <li class="py-2 list-inside">{{ passenger }}</li>
